Created Activity Two with Halloween Joke

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_my2">my2Activity</string>
     <string name="title_activity_my3">my3Activity</string>
+    <string name ="katie_button">What do you call a fat pumpkin?</string>
 </resources>
